# atom-potential-scatter

./: .gitignore  README.md  atom_potential_scatter.py  check_energy.py  run_scatter.py
atom-potential-scatter/: Cargo.toml
atom-potential-scatter/src/: lib.rs  main.rs
