[package]
name = "atom-potential-scatter"
version = "0.1.1"
authors = ["Sam Lambrick <sam.m@lambrick.org.uk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "atom_potential_scatter"
crate-type = ["dylib", "rlib"]

[dependencies]
nalgebra = "0.20"
splines = "1.0.0"
rayon = "1.1"
rand_distr = "0.4.3"
rand = "0.8.5"
fftconvolve = "0.1.1"
ndarray = "0.15"